<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="greeting">Hello</string>
    <string name="click">Click me</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>