<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_welcome_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:id="@+id/btn_login_back"
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:layout_margin="20dp"
            android:background="@drawable/arrow_left"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="108dp"
        android:layout_height="24dp"
        android:layout_marginTop="46dp"
        android:layout_marginStart="41dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/login_welcome_container"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginStart="41dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:id="@+id/username_container"
        app:layout_constraintTop_toBottomOf="@+id/login_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/message"/>

            <View
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:background="#C1C7D0"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/login_username"
                android:hint="@string/email_address"
                android:background="@null"
                android:gravity="center_vertical"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C1C7D0"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password_container"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/username_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/lock"/>

            <View
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:background="#C1C7D0"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/login_password"
                android:hint="@string/password"
                android:background="@null"
                android:gravity="center_vertical"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C1C7D0"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:layout_marginTop="27dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintTop_toBottomOf="@id/login_password_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <Button
        android:id="@+id/login_button"
        android:layout_height="65dp"
        android:layout_width="65dp"
        android:background="@drawable/rounded_next_button"
        android:layout_marginEnd="41dp"
        android:layout_marginTop="131dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass"
        />

</androidx.constraintlayout.widget.ConstraintLayout>